--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -415,9 +415,9 @@
         gap: 1rem;
         align-items: center;
         .xpBar {
-          pointer-events: none;
+          pointer-events: auto;
           height: 0.5rem;
-          bottom: -0.25rem;
+          bottom: 0rem;
           width: 100%;
           left: 0;
           background: var(--bg-color);
